# ln

./: .clang-format  CMakeLists.txt  Makefile  main.c
rust/: Makefile
src/: config.h  git_log_entry.h  globals.h  main.c
zig/: Makefile  build.zig
zig/src/: app.zig  main.zig
